fix bulwark mobile logo spacing

--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ a {
   and (max-device-width: 960px)
   and (-webkit-min-device-pixel-ratio: 2) {
 
-  .logo {
+  .protspec-logo {
     margin-top: 1.5rem;
   }
 
